--- a/src/app/layouts/admin/message/message.component.scss
+++ b/src/app/layouts/admin/message/message.component.scss
@@ -96,8 +96,13 @@
         padding-right: 24px;
       }
 
-      &.text-center {
+      &.no-data {
+        position: absolute;
+        width: 100%;
+        height: 48px;
+        padding: 0;
         text-align: center;
+        line-height: 48px;
       }
 
       a {
