--- a/src/app/routes/basic/role/role.component.scss
+++ b/src/app/routes/basic/role/role.component.scss
@@ -75,8 +75,13 @@
             width: 80px;
           }
 
-          &.text-center {
+          &.no-data {
+            position: absolute;
+            width: 100%;
+            height: 48px;
+            padding: 0;
             text-align: center;
+            line-height: 48px;
           }
         }
       }
