--- a/src/app/routes/basic/user/user.component.html
+++ b/src/app/routes/basic/user/user.component.html
@@ -84,7 +84,7 @@
         <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: columns;"></tr>
         <tr class="mat-row" [hidden]="loading" *matNoDataRow>
-          <td class="mat-cell text-center" [attr.colspan]="columns.length">{{ 'shared.data.empty' | translate }}</td>
+          <td class="mat-cell no-data" [attr.colspan]="columns.length">{{ 'shared.data.empty' | translate }}</td>
         </tr>
       </table>
     </div>
