--- a/src/app/routes/basic/role/role.component.html
+++ b/src/app/routes/basic/role/role.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container hasBackdrop="true">
-  <mat-sidenav #$filter mode="over" position="end">
+  <mat-sidenav #$filter mode="over" position="end" autoFocus="false">
     <form autocomplete="off" [formGroup]="filter.form">
       <mat-form-field>
         <mat-label>{{ 'routes.basic.role.name' | translate }}</mat-label>
