--- a/src/app/shared/components/table-column-pattern/table-column-pattern.component.html
+++ b/src/app/shared/components/table-column-pattern/table-column-pattern.component.html
@@ -1,5 +1,5 @@
 <div cdkDropList [cdkDropListSortPredicate]="sticky" (cdkDropListDropped)="drop($event)">
-  <button mat-menu-item cdkDrag *ngFor="let item of columns" [cdkDragDisabled]="item.sticky">
+  <button mat-menu-item cdkDrag *ngFor="let item of columns" [cdkDragDisabled]="item.sticky || !item.header">
     <mat-icon class="app-foreground-secondary">more_vert</mat-icon>
     <mat-checkbox [(ngModel)]="item.display" (click)="$event.stopPropagation()">{{ item.header | translate }}</mat-checkbox>
   </button>
