--- a/src/app/shared/components/table-row-selection/table-row-selection.component.html
+++ b/src/app/shared/components/table-row-selection/table-row-selection.component.html
@@ -1,6 +1,7 @@
 <ng-container [ngSwitch]="type">
   <mat-checkbox *ngSwitchCase="'header'" (change)="select($event)"
     [checked]="checked && model.selected.length == data.length"
-    [indeterminate]="checked && model.selected.length != data.length"></mat-checkbox>
+    [indeterminate]="checked && model.selected.length != data.length"
+    [disabled]="!data.length"></mat-checkbox>
   <mat-checkbox *ngSwitchCase="'row'" (change)="select($event)" [checked]="checked"></mat-checkbox>
 </ng-container>
