--- a/src/app/routes/admin/role/edit/edit.component.html
+++ b/src/app/routes/admin/role/edit/edit.component.html
@@ -2,11 +2,11 @@
 <div mat-dialog-content>
   <form #form autocomplete="off" [formGroup]="formGroup">
     <mat-form-field>
-      <mat-label>{{ 'routes.basic.role.name' | translate }}</mat-label>
+      <mat-label>{{ 'routes.admin.role.name' | translate }}</mat-label>
       <input matInput formControlName="name" required>
     </mat-form-field>
     <mat-form-field>
-      <mat-label>{{ 'routes.basic.role.remark' | translate }}</mat-label>
+      <mat-label>{{ 'routes.admin.role.remark' | translate }}</mat-label>
       <input matInput formControlName="remark">
     </mat-form-field>
   </form>
