--- a/src/app/routes/admin/role/menu/menu.component.html
+++ b/src/app/routes/admin/role/menu/menu.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ 'routes.basic.role.menu' | translate}}</h2>
+<h2 mat-dialog-title>{{ 'routes.admin.role.menu' | translate}}</h2>
 <div mat-dialog-content>
   <div class="loading" *ngIf="loading; else $tree">
     <mat-spinner></mat-spinner>
