--- a/src/app/routes/admin/user/edit/edit.component.html
+++ b/src/app/routes/admin/user/edit/edit.component.html
@@ -2,15 +2,15 @@
 <div mat-dialog-content>
   <form #form autocomplete="off" [formGroup]="formGroup">
     <mat-form-field>
-      <mat-label>{{ 'routes.basic.user.name' | translate }}</mat-label>
+      <mat-label>{{ 'routes.admin.user.name' | translate }}</mat-label>
       <input matInput formControlName="name" required>
     </mat-form-field>
     <mat-form-field>
-      <mat-label>{{ 'routes.basic.user.account' | translate }}</mat-label>
+      <mat-label>{{ 'routes.admin.user.account' | translate }}</mat-label>
       <input matInput formControlName="account" required>
     </mat-form-field>
     <mat-form-field>
-      <mat-label>{{ 'routes.basic.user.role' | translate }}</mat-label>
+      <mat-label>{{ 'routes.admin.user.role' | translate }}</mat-label>
       <mat-select formControlName="role" multiple>
         <mat-option *ngFor="let item of roles" [value]="item.id">{{item.name}}</mat-option>
       </mat-select>
