--- a/src/app/shared/components/dialog-prompt/dialog-prompt.component.html
+++ b/src/app/shared/components/dialog-prompt/dialog-prompt.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ 'shared.dialog.edit' | translate }}</h2>
+<h2 mat-dialog-title>{{ title || ('shared.dialog.edit' | translate) }}</h2>
 <div mat-dialog-content>
   <mat-form-field [ngSwitch]="type">
     <mat-label [innerHTML]="text"></mat-label>
