fix:代码整理优化

--- a/src/app/layouts/admin/password/password.component.html
+++ b/src/app/layouts/admin/password/password.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>{{ 'layouts.admin.password.title' | translate }}</h2>
 <div mat-dialog-content>
-  <form #form autocomplete="off" [formGroup]="formGroup">
+  <form autocomplete="off" [formGroup]="form">
     <mat-form-field>
       <mat-label>{{ 'layouts.admin.password.current' | translate }}</mat-label>
       <input matInput type="password" formControlName="current" required>
@@ -16,6 +16,6 @@
   </form>
 </div>
 <div mat-dialog-actions align="end">
-  <button mat-button color="primary" [disabled]="formGroup.invalid" (click)="change()">{{ 'shared.dialog.ok' | translate | uppercase }}</button>
+  <button mat-button color="primary" [disabled]="form.invalid" (click)="change()">{{ 'shared.dialog.ok' | translate | uppercase }}</button>
   <button mat-button mat-dialog-close>{{ 'shared.dialog.cancel' | translate | uppercase }}</button>
 </div>
