--- a/src/app/layouts/crud/edit/edit.component.html
+++ b/src/app/layouts/crud/edit/edit.component.html
@@ -30,6 +30,12 @@
           <mat-datepicker-toggle matSuffix [for]="$picker"></mat-datepicker-toggle>
           <mat-datepicker #$picker></mat-datepicker>
         </mat-form-field>
+        <mat-form-field *ngSwitchCase="'datetime'">
+          <mat-label>{{ item.label | translate }}</mat-label>
+          <input matInput readonly [formControlName]="item.id" [matDatepicker]="$picker">
+          <mat-datepicker-toggle matSuffix [for]="$picker"></mat-datepicker-toggle>
+          <mat-datetimepicker #$picker></mat-datetimepicker>
+        </mat-form-field>
         <mat-form-field *ngSwitchDefault>
           <mat-label>{{ item.label | translate }}</mat-label>
           <input matInput [formControlName]="item.id" [required]="item.required">
