--- a/src/app/layouts/crud/filter/filter.component.html
+++ b/src/app/layouts/crud/filter/filter.component.html
@@ -37,6 +37,21 @@
         <mat-datepicker-toggle matSuffix [for]="$picker"></mat-datepicker-toggle>
         <mat-date-range-picker #$picker></mat-date-range-picker>
       </mat-form-field>
+      <mat-form-field *ngSwitchCase="'datetime'">
+        <mat-label>{{ item.label | translate }}</mat-label>
+        <input matInput readonly [formControlName]="item.id" [matDatepicker]="$picker">
+        <mat-datepicker-toggle matSuffix [for]="$picker"></mat-datepicker-toggle>
+        <mat-datetimepicker #$picker></mat-datetimepicker>
+      </mat-form-field>
+      <mat-form-field *ngSwitchCase="'datetime-range'">
+        <mat-label>{{ item.label | translate }}</mat-label>
+        <mat-date-range-input [rangePicker]="$picker">
+          <input matStartDate readonly [formControlName]="item.id + 'From'" (focus)="$picker.open()">
+          <input matEndDate readonly [formControlName]="item.id + 'To'" (focus)="$picker.open()">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="$picker"></mat-datepicker-toggle>
+        <mat-datetime-range-picker #$picker></mat-datetime-range-picker>
+      </mat-form-field>
       <mat-form-field *ngSwitchDefault>
         <mat-label>{{ item.label | translate }}</mat-label>
         <input matInput [formControlName]="item.id">
